Hotfix the manifest to contain proper log size, caller reports bad one